--- a/index.html
+++ b/index.html
@@ -3,52 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cybersecurity Action Plan</title>
+    <title>Collaborative Cybersecurity How-To Guide</title>
     <!-- Add your stylesheet link here -->
     <!-- <link rel="stylesheet" href="styles.css"> -->
 </head>
 <body>
     <header>
-        <h1>Cybersecurity Action Plan: Collaborate and Protect</h1>
-        <p>Welcome to our comprehensive guide on enhancing team collaboration and cybersecurity.</p>
+        <h1>How-To Collaborate on Cybersecurity</h1>
+        <p>Learn to strengthen your team's cybersecurity with our easy-to-follow guide.</p>
     </header>
 
-    <section id="about">
-        <h2>About the Plan</h2>
-        <p>This plan outlines essential steps for teams to enhance their cybersecurity measures.</p>
+    <section id="how-to-guide">
+        <h2>How-To Guide</h2>
+        <!-- Repeat this block for each How-To item -->
+        <div class="how-to-item">
+            <h3>How to Review and Secure Firewall Rules</h3>
+            <p>A step-by-step guide to enhancing security through firewall management.</p>
+            <ul>
+                <li>Step 1: Access your firewall settings.</li>
+                <li>Step 2: Review current rules and protocols.</li>
+                <li>Step 3: Implement recommended security enhancements.</li>
+            </ul>
+        </div>
+        <!-- Add other How-To items here -->
     </section>
 
-    <section id="action-plan">
-        <h2>Action Plan Overview</h2>
-        <!-- Repeat this block for each action item -->
-        <div class="action-item">
-            <h3>Review and Secure Firewall Rules</h3>
-            <p>Details about creating greater security through firewall rules.</p>
-        </div>
-        <!-- Add other action items here -->
-    </section>
-
-    <section id="detailed-steps">
-        <h2>Detailed Action Steps</h2>
-        <!-- Repeat this block for each step -->
-        <div class="step">
-            <h3>Identify: Check Task Manager</h3>
-            <p>Details about checking the Task Manager for unknown processes.</p>
-        </div>
-        <!-- Add other steps here -->
+    <section id="helpful-hints">
+        <h2>Helpful Hints</h2>
+        <p>Insider tips for effective and efficient cybersecurity collaboration.</p>
+        <ul>
+            <li>Hint 1: Regularly update your antivirus software.</li>
+            <li>Hint 2: Conduct frequent security training sessions for your team.</li>
+            <!-- Add more hints here -->
+        </ul>
     </section>
 
     <section id="resources">
-        <h2>Resources and Further Reading</h2>
-        <p>Links to additional resources on cybersecurity and collaboration.</p>
+        <h2>Resources for Further Learning</h2>
+        <p>Explore these resources to deepen your understanding of cybersecurity.</p>
     </section>
 
     <footer>
-        <p>Contact us for more information or provide feedback.</p>
+        <p>Contact us for more information or to share your feedback.</p>
         <!-- Add contact details or a form here -->
     </footer>
 
-    <!-- You might want to add JavaScript here -->
+    <!-- JavaScript for interactive elements -->
     <!-- <script src="script.js"></script> -->
 </body>
 </html>
