--- a/index.html
+++ b/index.html
@@ -4,8 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Collaborative Cybersecurity How-To Guide</title>
-    <!-- Add your stylesheet link here -->
-    <!-- <link rel="stylesheet" href="styles.css"> -->
+    <style>
+        /* General body styles */
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f0f0f0; /* Light gray background */
+        }
+
+        /* Header styles */
+        header {
+            background-color: #004d99; /* Dark blue background */
+            color: white;
+            padding: 20px;
+            text-align: center;
+        }
+
+        /* Section styles */
+        section {
+            padding: 20px;
+            margin: 20px;
+        }
+
+        /* Footer styles */
+        footer {
+            background-color: #333; /* Dark gray background */
+            color: white;
+            text-align: center;
+            padding: 10px;
+            position: relative;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
 </head>
 <body>
     <header>
