--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Collaborative Cybersecurity How-To Guide</title>
+    <title>Securing your system: Cybersecurity How-To Guide</title>
     <style>
         /* General body styles */
         body {
