feat: add hints

--- a/index.html
+++ b/index.html
@@ -61,26 +61,24 @@
     </section>
 
     <section id="helpful-hints">
-        <h2>Helpful Hints</h2>
-        <p>Insider tips for effective and efficient cybersecurity collaboration.</p>
+        <h2>Helpful Hints: Our Approach to System Security</h2>
+        <p>Insider tips based on our successful steps toward enhancing cybersecurity in the lab:</p>
         <ul>
-            <li>Hint 1: Regularly update your antivirus software.</li>
-            <li>Hint 2: Conduct frequent security training sessions for your team.</li>
-            <!-- Add more hints here -->
+            <li>Hint 1: Regularly check the Task Manager for unknown processes that could be draining CPU resources. Early detection is key.</li>
+            <li>Hint 2: If you find an unknown process, such as an unexpected .exe file, terminate it to stop potentially linked malicious activities.</li>
+            <li>Hint 3: Routinely inspect downloaded files and documents for unknown or suspicious malware. Vigilance prevents breaches.</li>
+            <li>Hint 4: Keep your firewall updated with recommended settings. A secure firewall is a fundamental defense against cyber threats.</li>
+            <li>Hint 5: Respond swiftly to any identified threats by terminating suspicious or harmful malware and application files.</li>
+            <li>Hint 6: Don’t forget to check the trash bin for recently deleted files that might need to be recovered to avoid data loss.</li>
+            <li>Hint 7: Document actions taken against threats for future reference and learning. Keeping records helps in understanding patterns of attacks.</li>
+            <li>Hint 8: Foster a culture of cybersecurity awareness among your team. Everyone’s vigilance contributes to overall system security.</li>
         </ul>
     </section>
 
-    <section id="resources">
-        <h2>Resources for Further Learning</h2>
-        <p>Explore these resources to deepen your understanding of cybersecurity.</p>
-    </section>
-
     <footer>
-        <p>Contact us for more information or to share your feedback.</p>
+        <p>Hi Mr. Restly</p>
         <!-- Add contact details or a form here -->
     </footer>
 
-    <!-- JavaScript for interactive elements -->
-    <!-- <script src="script.js"></script> -->
 </body>
 </html>
