feat: add names in footer

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     </section>
 
     <footer>
-        <p>Hi Mr. Restly</p>
+        <p>Hi Mr. Restly - Jonah & Robert</p>
         <!-- Add contact details or a form here -->
     </footer>
 
